# starwars-api-challenge

./: .env_example  README.md  config.py  main.py  pyproject.toml
app/assets/: questions.py
app/controllers/: starwars.py
app/services/: question_processing_service.py  swapi_service.py
